name:           sce
version:        1
category:       Web
author:         Adam Bergmark
maintainer:     adam@bergmark.nl
copyright:      (c) 2018 Adam Bergmark
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

executable sce
  main-is: Main.hs
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      aeson
    , base ==4.11.*
    , http-client
    , http-types
    , servant-checked-exceptions
    , servant-client
    , servant-server
    , warp
